# linux_library_libdrm

./: .gitignore  LICENSE.MIT  Makefile.am  build.sh  configure.ac  groups  project.config
amdgpu/: Makefile.am
debian/: changelog  control  drm-utils.install  libdrm-nexell.install  libdrm2.install  libdrm2.symbols  rules
debian/patches/: add-missing-bxt-pciids.diff  add-missing-skl-pciids.diff  series
exynos/: Makefile.am
freedreno/: Makefile.am
intel/: Makefile.am
nexell/: Makefile.am  libdrm_nexell.pc.in  nexell_drm.c  nexell_drm.h  nexell_drmif.h
nouveau/: Makefile.am
omap/: Makefile.am
packaging/: libdrm.spec
radeon/: Makefile.am
tegra/: Makefile.am
tests/: Makefile.am
vc4/: Makefile.am
